changed startJetty.sh to use java 8